--- a/css/screen.css
+++ b/css/screen.css
@@ -8,7 +8,7 @@ html {
     font-size: 16px;
     line-height: 1.5;
     font-family: "Helvetica Neue", Helvetica, arial, sans-serif;
-    color: #111;
+    color: #5C6366;
     padding: 48px 24px 24px;
 }
 
@@ -25,7 +25,7 @@ body {
  */
 
 ::selection {
-    background: #e85e00;
+    background: #00e6a1;
     color: white;
     text-shadow: none;
 }
@@ -46,9 +46,13 @@ img {
     ---
     Default markup for typographic elements
 */
+h1,
+h2,
+h3 {
+    color: #17181A;
+}
 
 h1 {
-    font-family: "Times New Roman", serif;
     font-size: 36px;
     font-weight: normal;
     line-height: 40px;
@@ -123,18 +127,18 @@ hr {
 }
 
 a {
-    color: RoyalBlue;
+    color: #00A1E6;
     transition: all .1s ease-in-out;
 }
 
 a:visited,
 a:active {
-    color: BlueViolet;
+    color: #00e6a1;
 }
 
 a:hover,
 a:focus {
-    color: Crimson;
+    color: #1abaff;
 }
 
 /* Small devices (landscape phones, 576px and up) */
