--- a/css/screen.css
+++ b/css/screen.css
@@ -1,3 +1,14 @@
+@font-face {
+    font-family: "Inter Web";
+    font-weight: 400;
+    src: url("../fonts/Inter-Regular.woff") format("woff")
+}
+
+@font-face {
+    font-family: "Inter Web";
+    font-weight: 700;
+    src: url("../fonts/Inter-Bold.woff") format("woff")
+}
 /*
     Elements: Page
     ---
@@ -7,7 +18,7 @@
 html {
     font-size: 16px;
     line-height: 1.5;
-    font-family: "Helvetica Neue", Helvetica, arial, sans-serif;
+    font-family: "droid-serif", Georgia, serif;
     color: #5C6366;
     padding: 48px 24px 24px;
 }
@@ -50,6 +61,7 @@ h1,
 h2,
 h3 {
     color: #17181A;
+    font-family: "Inter web", "Helvetica Neue", Arial, Helvetica, sans-serif;
 }
 
 h1 {
